@@ -1,57 +1,64 @@
 package chat.server.controller;
 
 import chat.client.controller.ClientController;
+import chat.server.repository.ILog;
+import chat.server.repository.LogFile;
 import chat.server.view.ServerView;
 
+import java.util.ArrayList;
 import java.util.List;
 
 public class ServerController {
 
-    private boolean isWork;
+    private boolean isWork = false;
     private ServerView serverView;
-    private List<ClientController> listClientController;
+    private ILog log;
+
+
+    private List<ClientController> listClientControllers;
 
     public ServerController(ServerView serverView) {
         this.serverView = serverView;
+        this.log = new LogFile();
+        this.listClientControllers = new ArrayList<>();
     }
 
-    public void stop() {
-        if (!isWork){
-            showOnWindow("Server isn't run");
-        } else {
-            isWork = false;
-            while (!listClientController.isEmpty()){
-                disconnectUser(listClientController.get(listClientController.size() - 1));
-            }
-            showOnWindow("Server stopped");
-        }
+
+    public void disconnectUser(ClientController clientController) {
+        clientController.disconnectFromServer();
     }
 
-    private void disconnectUser(ClientController clientController) {
-        listClientController.remove(clientController);
-        if (clientController != null){
-            clientController.disconnectFromServer();
-            showOnWindow(clientController.getNameUser() + " disconnect");
-        }
+    public void connectUser(ClientController clientController) {
+        clientController.connectToServer();
     }
 
-    private void showOnWindow(String text) {
+    public List<ClientController> getUsersOnline() {
+        return listClientControllers;
+    }
+
+    private void showMessageInWindow(String text) {
         serverView.showMessage(text);
-    }
-
-    private void showConnectedUsers(){
-        listClientController.forEach(System.out::println);
+        log.write(text);
     }
 
     public void start() {
         if (!isWork){
-            showOnWindow("Server isn't run");
+            showMessageInWindow("Server isn't run");
+        } else {
+            isWork = true;
+            showMessageInWindow("Server running");
+        }
+    }
+
+    public void stop() {
+        if (!isWork){
+            showMessageInWindow("Server isn't run");
         } else {
             isWork = false;
-            while (!listClientController.isEmpty()){
-                disconnectUser(listClientController.getLast());
+            while (!listClientControllers.isEmpty()){
+                disconnectUser(listClientControllers.get(listClientControllers.size() - 1));
             }
-            showOnWindow("Server stopped");
+            showMessageInWindow("Server stopped");
         }
     }
 }
